# aoc2024

./: .gitignore  BUILD  Cargo.toml  MODULE.bazel  rust-project.json
1/: 1.cc  1.rs  BUILD  Cargo.toml
2/: 2.cc  BUILD
3/: 3.cc  BUILD
4/: 4.cc  BUILD
5/: 5.rs  BUILD
flags/: BUILD  file_setup.cc  file_setup.h  flags.h  flags_string.h  flags_table.h  flags_table_char.h  flags_table_int.h
table/: BUILD  Cargo.toml  parsing_demo.cc  table.h  table.rs  table_test.cc
table_read/: BUILD  table.h  table_read.cc  table_read.h  table_read_test.cc
