###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "abseil-cpp", version = "20240116.0")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_rust", version = "0.61.0")

# Crate universe for Rust dependencies
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
